--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Code examples for the upcoming book Mastering D3.js (2nd edition)",
   "main": "index.js",
   "scripts": {
+    "build": "./node_modules/metalsmith/bin/metalsmith --config=src/metalsmith.json",
+    "serve": "http-server html"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/mastering-d3/mastering-d3/issues"
   },
-  "homepage": "https://github.com/mastering-d3/mastering-d3"
+  "homepage": "https://github.com/mastering-d3/mastering-d3",
+  "dependencies": {
+    "handlebars": "^4.0.5",
+    "metalsmith": "^2.1.0",
+    "metalsmith-layouts": "^1.4.4",
+    "metalsmith-markdown": "^0.2.1",
+    "metalsmith-permalinks": "^0.4.1"
+  }
 }
