Basic site structure

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Code examples for the upcoming book Mastering D3.js (2nd edition)",
   "main": "index.js",
   "scripts": {
-    "build": "./node_modules/metalsmith/bin/metalsmith --config=src/metalsmith.json",
-    "serve": "http-server html"
+    "build": "npm install && gulp build"
   },
   "repository": {
     "type": "git",
@@ -22,11 +21,16 @@
     "url": "https://github.com/mastering-d3/mastering-d3/issues"
   },
   "homepage": "https://github.com/mastering-d3/mastering-d3",
-  "dependencies": {
+  "devDependencies": {
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-stylus": "^2.3.0",
     "handlebars": "^4.0.5",
     "metalsmith": "^2.1.0",
     "metalsmith-layouts": "^1.4.4",
     "metalsmith-markdown": "^0.2.1",
-    "metalsmith-permalinks": "^0.4.1"
+    "metalsmith-permalinks": "^0.4.1",
+    "normalize": "^0.3.1",
+    "normalize-styl": "^3.0.3"
   }
 }
