--- a/package.json
+++ b/package.json
@@ -24,8 +24,17 @@
   "devDependencies": {
     "del": "^2.2.0",
     "gulp": "^3.9.1",
+    "gulp-jshint": "^2.0.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rev-all": "^0.8.22",
+    "gulp-shell": "^0.5.2",
     "gulp-stylus": "^2.3.0",
+    "gulp-watch": "^4.3.5",
     "handlebars": "^4.0.5",
+    "jshint": "^2.9.1",
+    "jshint-stylish": "^2.1.0",
     "metalsmith": "^2.1.0",
     "metalsmith-layouts": "^1.4.4",
     "metalsmith-markdown": "^0.2.1",
